# browsecomp-V3

./: .gitignore  CLAUDE.md  CODEBUDDY.md  CODE_REVIEW_REPORT.md  README.md  demo_yang_chain.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
browsecomp_v3/: __init__.py
browsecomp_v3/constraints/: __init__.py  constraint_generator.py  mapping_loader.py  value_generator.py
browsecomp_v3/core/: __init__.py  config.py  exceptions.py  models.py
browsecomp_v3/generator/: __init__.py  answer_extractor.py  question_generator.py  reasoning_builder.py
browsecomp_v3/graph/: __init__.py  kg_loader.py  query_executor.py  traversal.py
browsecomp_v3/templates/: __init__.py  template_loader.py  template_selector.py
browsecomp_v3/utils/: __init__.py  logging.py
browsecomp_v3/validator/: __init__.py  diversity_checker.py  question_validator.py
config/: default.yaml
data/templates/: 推理链模板.md  (+1 more)
docs/: 30_CONSTRAINTS_ACTIVATION_REPORT.md  ARCHITECTURE.md  BROWSECOMP_V3_PRIMER.md  CHANGELOG.md  COMPLEXITY_ANALYSIS.md  COMPLEX_QUESTION_GENERATION_ANALYSIS.md  CONCEPT_GUIDE.md  CONSTRAINT_APPLICABILITY_ANALYSIS.md  CONSTRAINT_TYPES_ANALYSIS.md  CONVERSATION_LOG_20260204.md  DeepResearch.md  FAQ.md  GENERATION_MECHANISM_ANALYSIS.md  KG_STRUCTURE_ANALYSIS.md  LOW_COST_CONSTRUCTION_REPORT.md  MECHANISM_COMPARISON_V2_V3.md  MULTI_CONSTRAINT_TEST_REPORT.md  MULTI_HOP_COMPLETE_SUMMARY.md  MULTI_HOP_IMPLEMENTATION_REPORT.md  MULTI_HOP_SCALE_TEST_REPORT.md  PHASE3_COMPLETE_REPORT.md  PHASE3_FIX_REPORT.md  PHASE3_IMPLEMENTATION_REPORT.md  PROJECT_DOCS.md  PROJECT_MEMORY.md  QANDA_KG_ANALYSIS.md  QUICK_START.md  README.md  SOLUTION_A_DETAILED_DESIGN.md  SOLUTION_A_V2_BROWSE_COMPLEXITY.md  SOLUTION_A_V3_RISK_MITIGATION.md  SPEC_DYNAMIC_CONSTRAINT_CHAIN.md  STRATEGIC_DIRECTION_DISCUSSION.md  TEST_VALIDATION_REPORT.md  YANG_CHAIN_CONCLUSION.md  YANG_CHAIN_EXPERIMENT_PLAN.md  YANG_CHAIN_TEST_REPORT.md  worklogs.md  常用命令.md  项目理解.md
scripts/: upload_to_github.sh
tests/: __init__.py
(+24 files in other folders)
